@@ -49,13 +49,11 @@
                         <path>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
-                            <version>1.18.34</version>
+                            <version>1.18.36</version>
                         </path>
                     </annotationProcessorPaths>
                     <compilerArgs>
-                        <arg>--enable-preview</arg>
                     </compilerArgs>
-                    <release>21</release>
                 </configuration>
             </plugin>
         </plugins>
